Uitwerking van de exercise

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <h1>
     Hoi, ik ben Gary.
 </h1>
+<main>
 
 <p>Mijn hobbies zijn als volgt: </p>
 
@@ -21,10 +22,14 @@
 	<li>Gamen</li>
 	<li>Slapen</li>
 </ul>
+
+
+<p>Dit is mijn oom:</p>
+<img src="foto.jpg" alt="Opa">
     
 
 
 
-
+</main>
 </body>
 </html>
